<resources>
    <string name="app_name">Творец</string>
    <string name="nickname">Псевдоним</string>
    <string name="name_user"><u>Автор</u></string>
    <string name="email">Почта</string>
    <string name="post">Опубликовать</string>
    <string name="Draft">Черновик</string>
    <string name="RegistrationClose">Готово</string>
    <string name="Password">Пароль</string>
    <string name="Sing">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="menu_refresh">menu_refresh</string>
    <string name="save">Сохронить</string>
    <string name="new_email">Сменть почту</string>
    <string name="new_password">Сменить пароль</string>
    <string name="delete_user">Удалть акаунт</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="errorPassword">Пороли не совпадают</string>
    <string name="registration_hello">Регистрация</string>
    <string name="search">Поиск</string>
    <string name="search_archive">Поиск: архив</string>
    <string name="settings">Настройки</string>
    <string name="new_name">Смена никнейма</string>
    <string name="writer">Библиотека</string>
    <string name="music">Музыка</string>
    <string name="art">Галерея</string>
    <string name="card">Book</string>
    <string name="hello">Вход</string>
    <string name="atelier">Студии</string>
    <string name="real">Читать</string>
    <string name="exp">Опыт Творца:</string>
    <string name="pay">Поощрения</string>
    <string name="name_book">Название книги</string>
    <string name="add_file">Вставить файл</string>
    <string name="close">Отмена</string>
    <string name="email_conf">Подтвердить почту</string>
    <string name="complete">Готово</string>
    <string name="description">Описание книги</string>
    <string name="out">Выход</string>
    <string name="want_some">Хотите выйти?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="new_book">Новая книга</string>
    <string name="book">Книга</string>
    <string name="books">Книги</string>
    <string name="tool_menu_button">ToolMenuButton</string>
    <string name="edit">Редактировать</string>
    <string name="add_chapter">Добавить главы</string>
    <string name="delete_book">Удалить книгу</string>
    <string name="chapters">Главы</string>
    <string name="TopNew">Новинки</string>
    <string name="TopBooks">Популярные книги</string>
    <string name="TopUsers">Популярные писатели</string>
    <string name="subscribe">Подписаться</string>

    <string name="updatePassword"><u>Забыли пароль ?</u></string>
    <string name="my_library">Мои книги</string>
    <string name="my_music">Моя музыка</string>
    <string name="my_art">Мои рисунки</string>
    <string name="todo">TODO</string>

    <string name="manual">Чтобы правильно добавить книгу, вам необходимо:
        Написать название книги, описание книги,
        прикрепите обложку и файлы глав книги в хронологическом порядке.
        (Один файл одна глава). Так же можете указать куда будут поступать поощрения от других пользователей(по желанию).  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>