<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textColor="@color/text_color"
        android:gravity="center"
        android:fontFamily="@font/osr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_chapter"
        android:textSize="30sp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="15dp"
        android:minWidth="500dp"
        android:layout_width="match_parent"
        android:text="@string/add_file"
        android:id="@+id/addFile"
        android:gravity="center"
        android:fontFamily="@font/opb"
        android:textColor="@color/text_color"
        app:iconTint="@color/itemColor"
        app:icon="@drawable/ic_action_add_file"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_height="40dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RecyclerFiles"
        />
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:id="@+id/close1"
            android:gravity="start|center"
            android:text="@string/close"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="150dp"
            android:gravity="end|center"
            android:textSize="15sp"
            android:id="@+id/complete1"
            android:text="@string/complete"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>