<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    tools:context=".Auth.RegistrationActivity">

    <TextView
        android:textColor="@color/text_color"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/osr"
        android:gravity="center"
        android:text="@string/registration_hello"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/NicknameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NicknameLayout"
        app:hintTextColor="@color/itemColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"
        android:enabled="true"
        android:hint="@string/nickname"
        android:textColorHint="@color/itemColor"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeColor="@color/itemColor"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:textColor="@color/text_color"

            android:background="@color/cardColor"
            android:id="@+id/Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/osr"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailPerfect"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:enabled="true"
        android:hint="@string/email"
        app:boxStrokeColor="@color/itemColor"
        app:hintTextColor="@color/itemColor"
        android:textColorHint="@color/itemColor"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NicknameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegistration"
            android:background="@color/cardColor"
            android:textColor="@color/text_color"

            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:fontFamily="@font/osr"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/itemColor"
        android:id="@+id/Pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:enabled="true"
        android:hint="@string/Password"
        app:boxStrokeErrorColor="@color/red"
        android:textColorHint="@color/itemColor"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailPerfect">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@color/cardColor"
            android:textColor="@color/text_color"

            android:id="@+id/passwordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/osr"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextColor="@color/itemColor"
        android:id="@+id/RepeatPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:enabled="true"
        android:hint="@string/password_repeat"
        android:textColorHint="@color/itemColor"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/text_color"
            android:id="@+id/passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/osr"
            android:background="@color/cardColor"
            android:inputType="textPassword"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButtonClose"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/osr"
        android:gravity="center"
        android:text="@string/RegistrationClose"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RepeatPassword"
        app:layout_constraintVertical_bias="0.74"
        app:strokeWidth="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>