<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"

    android:layout_height="match_parent"
    tools:context=".UserArchive.AddActivity.AddBookActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:id="@+id/manual"
            android:elevation="0dp"
            style="@style/Theme.Creator_"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/itemColor"
            app:borderWidth="0dp"
            android:src="@drawable/question"
            android:tint="@color/itemColor"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/todo" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/barTrue_False"
            style="@style/Theme.Creator_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:elevation="4dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/check_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background_navigation_bat"
                app:menu="@menu/true_false"
                app:navigationIcon="@drawable/ic_action_clear"
                app:navigationIconTint="@color/itemColor"
                app:title="@string/new_book"
                app:titleTextColor="@color/text_color" />

            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/reciclerrr"
                android:layout_width="140dp"
                android:layout_height="170dp"
                android:layout_margin="15dp"
                android:elevation="2dp"
                app:shape_roundRect_bottomLeftRadius="10dp"
                app:shape_roundRect_bottomRightRadius="10dp"
                app:shape_roundRect_topLeftRadius="10dp"
                app:shape_roundRect_topRightRadius="10dp">

                <ImageButton
                    android:id="@+id/bookImage"
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_action_name_pluss" />
            </com.github.florent37.shapeofview.shapes.RoundRectView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameBookInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:enabled="true"
                android:hint="@string/name_book"
                android:textColorHint="@color/itemColor"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/itemColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_edit_text"
                    android:inputType="textPersonName"
                    android:maxHeight="50dp"
                    android:maxLength="50"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reciclerrr"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/description"
                android:textColorHint="@color/itemColor"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/itemColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_edit_text"
                    android:maxHeight="290dp"
                    android:maxLength="1000"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:enabled="true"
                android:hint="@string/pay"
                android:textColorHint="@color/itemColor"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/itemColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_edit_text"
                    android:inputType="textPersonName"
                    android:maxHeight="50dp"
                    android:maxLength="200"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButtonFileBook"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/reciclerrr"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/opb"
                android:gravity="center"
                android:shadowColor="@color/white"
                android:text="@string/add_file"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                app:icon="@drawable/ic_action_add_file"
                app:iconTint="@color/itemColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerListFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addButtonFileBook" />
        </com.google.android.material.appbar.AppBarLayout>
    </RelativeLayout>


</ScrollView>